# yang-mills-s3-computations

./: .gitignore  CITATION.cff  LICENSE  README.md  conftest.py  pyproject.toml
app/: explorer.py
examples/: 01_s3_geometry.py  02_hodge_spectrum.py  03_mass_gap_proof.py  04_glueball_predictions.py  05_lattice_monte_carlo.py
scripts/: compare_lattice_qcd.py  compute_spectrum.py  quick_demo.py  run_monte_carlo.py  verify_proof_chain.py
tests/gauge/: test_chern_simons.py  test_ghost_sector.py  test_gribov.py  test_instanton.py  test_instanton_corrections.py  test_maurer_cartan.py  test_yang_mills_action.py
tests/geometry/: test_cmb_spectrum.py  test_extrinsic_curvature.py  test_hodge_spectrum.py  test_hopf.py  test_hopf_reduction.py  test_icosahedral_spectrum.py  test_istar_eigenmodes.py  test_poincare_homology.py  test_projection.py  test_ricci.py  test_s3_coordinates.py  test_s4_spectral_geometry.py  test_weitzenboeck.py
tests/lattice/: test_gribov_measurement.py  test_lattice_ym.py  test_mc_engine.py  test_mc_runner.py  test_mc_serious.py  test_poincare_lattice.py  test_poincare_mc.py  test_s3_lattice.py  test_wilson_string_tension.py
tests/proofs/: __init__.py  test_adiabatic_comparison.py  test_adiabatic_continuity.py  test_adiabatic_gribov.py  test_anharmonic_scaling.py  test_bakry_emery_gap.py  test_bridge_lemma.py  test_bridge_tightening.py  test_certified_gap_pipeline.py  test_conditional_decompactification.py  test_config_space_gap.py  test_conjecture_7_2.py  test_constructive_s3.py  test_continuum_limit.py  (+45 more)
yang_mills_s3/: __init__.py
(+190 files in other folders)
