[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yang-mills-s3"
version = "1.0.0"
description = "Computational verification of the Yang-Mills mass gap on S³×ℝ"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "L. F. Pichardo", email = "yang-mills@kromati.co"}
]
keywords = ["yang-mills", "mass-gap", "quantum-field-theory", "spectral-geometry", "S3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist"]
app = ["streamlit>=1.30"]
all = ["yang-mills-s3[dev,app]"]

[project.urls]
Repository = "https://github.com/Pichardescu/yang-mills-s3-computations"

[tool.setuptools.packages.find]
include = ["yang_mills_s3*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
